# fansly-scraper

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  API_DOWNLOAD_TEST_MIGRATION_TODO.md  CHANGELOG.md  CHECKKEY_JSPYBRIDGE.md  Dockerfile  Fansly-API-responses.md  METADATA_TEST_MIGRATION_TODO.md  OPTIMIZATION_PROTOTYPES.md  README.md  RewriteNotes.md  STASH_GRAPHQL_CLIENT_MIGRATION_PLAN.md  STASH_TEST_MIGRATION_TODO.md  Stash-Processing-Patterns.md  alembic.ini  codecov.yml  docker-bake.hcl  fansly_downloader_ng.py  index.html  logging_utils.py  mkdocs.yml  mp4hash.py  package-lock.json  package.json  pyproject.toml  repair_db.py  search.html  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci-lint.yml  docs.yml  release-on-tag.yml
alembic/: env.py
alembic/versions/: 00c9f171789c_account_createdat_plus_others.py  06658bf47c03_add_wall_performance_indexes.py  0b04c70972e4_relationship_with_wall.py  0c4cb91b36d5_case_insensitive_hashtag_value.py  0e79e34eea22_fix_attachment_id_to_bigint.py  187642755f36_add_cascade_to_post_mentions_fk.py  1941514875f1_clean_malformed_hashtags.py  1c766f50e19a_initial_migration.py  1e508a50d2fa_add_index_to_accountid_on_accountmedia.py  2dc7238fee2b_add_stub_tracker_and_remove_orphanable_.py  39e07e00a3f6_returning_the_recipientid.py  3b51fe86b710_restore_cascade_on_wall_posts_and_media_.py  4416b99f028e_index_value_of_hashtag.py  4b98a29f4965_add_a_new_option_for_the_contenttype_.py  5d3befc60c19_add_subscription_version_for_ws_event_.py  6196a903fd09_added_is_downloaded_hash_local_filename.py  64dc46541521_correct_message_format.py  6dcb1d898d8b_changing_some_fks_constraints_indexes.py  7c3779509867_walls_createdat.py  7cc9ae5e798a_added_2_more_contenttypes_in_the_enum.py  7f057c9b00e0_modify_post_mentions_constraints.py  84146fdb359d_correct_spelling_of_variants_plus_others.py  a4e07e00b3f7_add_media_locations_and_flags.py  b2f528bacfd3_add_a_new_option_for_the_contenttype_.py  b4e07e00b3f8_add_wall_posts.py  b6d60f698c27_merge_fork_main_tests_to_100_migration_.py  b8dcecc1e979_bigint.py  caac8150ed80_add_subscriptions_subscription_plans_.py  cc6fe4e9ef45_hashtags_and_stash_ids.py  cfe472c5a1ae_added_stories_class.py  d061d57b6139_add_media_duration_and_bundle_position.py  e4a1f7e15836_add_id_primary_key_to_post_mentions.py  ebb4481bb4c7_change_is_downloaded_to_boolean.py  f8df81787709_adding_stash_id_to_performer.py  merge_recent_migrations.py
api/: __init__.py  fansly.py  rate_limiter.py  rate_limiter_display.py  websocket.py  websocket_protocol.py  websocket_subprocess.py
archive/hardCut-PostgreSQL-Implementation-Plan/: index.html
changelog/: index.html
config/: __init__.py  args.py  browser.py  config.py  decorators.py  fanslyconfig.py  loader.py  logging.py  media_filters.py  metadatahandling.py  modes.py  schema.py  validation.py  version.py  wall_filters.py
configuration/config_options/: index.html
daemon/: dashboard.py  filters.py  handlers.py  livestream_watcher.py  polling.py  runner.py
docs/: MP4Links.md  STASH_ORM_MIGRATION_GUIDE.md  TESTING_REQUIREMENTS.md  V0_10_MIGRATION_PLAN.md  index.md  mp4-layout.txt
docs/configuration/: config_options.md
docs/planning/: STASH_ORM_MIGRATION_GUIDE.md  monitoring-daemon-architecture.md
docs/reference/: Fansly-Route-Table.md  Fansly-WebSocket-Protocol.md  Stash-Processing-Patterns.md  architecture.md  monitoring-cadence.md
docs/testing/: PASS_2_AUDIT_MASTER_REPORT.md  TESTING_REQUIREMENTS.md
download/: __init__.py  account.py  collections.py  common.py  core.py  downloadstate.py  globalstate.py  livestream.py  livestream_chat.py  m3u8.py  media.py  mediafilters.py  messages.py  single.py  statistics.py  stories.py  timeline.py  transaction.py  types.py  wall.py  wallfilters.py
errors/: __init__.py  mp4.py
fileio/: dedupe.py  dedupe_working.py  fnmanip.py  mp4.py  normalize.py  preview_repair.py
guide/manual-token-extraction/: index.html
helpers/: __init__.py  browser.py  checkkey.py  common.py  ffmpeg.py  logging.py  metadata_manager.py_old  rich_progress.py  stats.py  timer.py  web.py
media/: __init__.py  media.py  mediaitem.py
metadata/: __init__.py  account.py  account_media.py  attachable.py  attachment.py  base.py  database.py  database_improvements.md  database_old.py  decorators.py  entity_store.py  hashtag.py  helpers.py  logging_config.py  media.py  media_utils.py  messages.py  models.py  post.py  relationship_logger.py  resource_management.py  story.py  stub_tracker.py  subscriptions.py  tables.py  wall.py
pathio/: __init__.py  pathio.py  types.py
planning/STASH_ORM_MIGRATION_GUIDE/: index.html
planning/monitoring-daemon-architecture/: index.html
reference/CHECKKEY_JSPYBRIDGE/: index.html
reference/Fansly-API-analysis/: index.html
reference/Fansly-Route-Table/: index.html
reference/Fansly-Stash-mapping/: index.html
scripts/: migrate_to_postgres.py  websocket_example.py  ws_monitor.py
search/: search_index.json
stash/: README.md  SCHEMA_IMPLEMENTATION.md  UPDATE_GQL_SCHEMA.md  __init__.py  base_protocols.py  client.py  client_helpers.py  context.py  example.py  file.py  fragments.py  gallery.py  gender_enum.py  graphql_utils.py  group.py  group_description.py  image.py  image_paths_type.py  logging.py  old_processing.py  performer.py  processing.py  scene.py  stash_base_file.py  stash_context.py  stash_gallery.py  stash_group.py  stash_image.py  stash_image_file.py  stash_interface.py  stash_performer.py  stash_processing.py  stash_scene.py  stash_scene_file.py  stash_studio.py  stash_tag.py  studio.py  studio_relationship.py  tag.py  tag_relationship.py  (+3 more)
stash_old/: gallery.py  group.py  image.py  image_paths.py  processing.py  processing_fix.py  scene.py  stash_context.py  stash_interface.py  studio.py  tag.py
tests/: conftest.py  crypto.py  test_socket_backstop.py  test_stash_protocols.py  test_stash_schema.py
textio/: __init__.py  logging.py  prompts.py  textio.py
updater/: __init__.py  utils.py
utils/: __init__.py  common.py  datetime.py  semaphore_monitor.py  statistics.py  web.py
(+501 files in other folders)
